# cargo-wipe

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  publish.yml  security-audit.yml
src/: command.rs  dir_helpers.rs  lib.rs  main.rs  opts.rs  wipe.rs  wipe_params.rs  writer.rs
src/configuration/: config.rs  file_util.rs  language_option.rs  mod.rs
src/tests/: command.rs  get_params.rs  mod.rs  wipe.rs  wipe_params.rs  wipe_permissions.rs
src/tests/helpers/: mod.rs  path.rs  test_run.rs
src/tests/test_helpers/: mod.rs  test_path.rs
