[package]
name = "cargo-wipe"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@iotic-labs.com>"]
description = "recursively wipe target and node_modules folders"
keywords = ["cli", "cargo", "wipe", "target", "node_modules"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/cargo-wipe"

[dependencies]
anyhow = "1.0"
directories = "4.0.1"
num-format = "0.4"
number_prefix = "0.4"
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_regex = "1.1.0"
structopt = "0.3"
yansi = "0.5"

[dev-dependencies]
parameterized = "1.0"
rand = "0.8"
