[package]
name = "cargo-wipe"
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Mihai Dinculescu <mihai.dinculescu@outlook.com>"]
description = "recursively wipe target and node_modules folders"
keywords = ["cli", "cargo", "wipe", "target", "node_modules"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"
repository = "https://github.com/mihai-dinculescu/cargo-wipe"

[dependencies]
anyhow = "1.0"
num-format = "0.4"
number_prefix = "0.4"
clap = { version = "3.0", features = ["derive"] }
yansi = "0.5"

[dev-dependencies]
parameterized = "1.0"
rand = "0.8"
